cli/tests/testdata/import_attributes/dynamic_error.out
error: Uncaught (in promise) TypeError: Expected a "None" module but loaded a "JSON" module.
const data = await import("./data.json");
             ^
    at async [WILDCARD]dynamic_error.ts:1:14
